--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>poi</artifactId>
             <version>3.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc14</artifactId>
+            <version>10.2.0.2.0</version>
+        </dependency>
 
     </dependencies>
 
